diagnostic problem set started, diagnostic feedback page created

--- a/app/index371.html
+++ b/app/index371.html
@@ -42,6 +42,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
             'lib/angular/angular.js',
             'lib/bootstrap/bootstrap.min.js',
             'lib/flot/jquery.flot.categories.js',
+			'data372/diagnostic.js',
             'data371/data1_1.js',
             'data371/data1_2.js',
             'data371/data1_3.js',
@@ -119,6 +120,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
 			'data371/data25_1.js',
 			'data371/data25_2.js',
             'js/controllers/feedback.js',
+			'js/controllers/feedback-diagnostic.js',
             'js/controllers/home.js',
             'js/controllers/problem.js',
             'js/controllers/problem-set-list.js',
@@ -197,6 +199,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
             'js/directives/ms-showplacedecimal.js',
             'js/directives/ms-sign.js',
             'js/directives/ms-size.js',
+			'js/directives/ms-solo-btn.js',
             'js/directives/ms-string.js',
             'js/directives/ms-strip-commas.js',
             'js/directives/ms-subtract-decimals.js',
