--- a/app/index372.html
+++ b/app/index372.html
@@ -43,6 +43,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
             'lib/jquery-ui/jquery-ui-1.10.4.custom/js/jquery-ui-1.10.4.custom.min.js',
 			'lib/bootstrap/bootstrap.min.js',
 			'lib/flot/jquery.flot.categories.js',
+			'data372/diagnostic.js',
 			'data372/data_a_1.js',
 			'data372/data_b_1.js',
 			'data372/data_c_1.js',
@@ -99,6 +100,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
 			'data372/data_dd_2.js',
 			'data372/data_ee_1.js',
 			'js/controllers/feedback.js',
+			'js/controllers/feedback-diagnostic.js',
 			'js/controllers/home.js',
 			'js/controllers/problem.js',
 			'js/controllers/problem-set-list.js',
@@ -180,6 +182,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
 			'js/directives/ms-showplacedecimal.js',
 			'js/directives/ms-sign.js',
 			'js/directives/ms-size.js',
+			'js/directives/ms-solo-btn.js',
 			'js/directives/ms-string.js',
 			'js/directives/ms-strip-commas.js',
 			'js/directives/ms-subtract-decimals.js',
