stubs for additional problem sets

--- a/app/index371.html
+++ b/app/index371.html
@@ -117,8 +117,12 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
             'data371/data22_4.js',
             'data371/data23_1.js',
 			'data371/data23_2.js',
+			'data371/data24_1.js',
+			'data371/data24_2.js',
 			'data371/data25_1.js',
 			'data371/data25_2.js',
+			'data371/data26_1.js',
+			'data371/data26_2.js',
             'js/controllers/feedback.js',
 			'js/controllers/feedback-diagnostic.js',
             'js/controllers/home.js',
