--- a/app/index372.html
+++ b/app/index372.html
@@ -84,6 +84,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
 			'data372/data_s_3.js',
 			'data372/data_s_4.js',
 			'data372/data_t_1.js',
+			'data372/data_t_2.js',
 			'data372/data_u_1.js',
 			'data372/data_v_1.js',
 			'data372/data_w_1.js',
