u.2, probs thru 10, t.2 correct prob 12

--- a/app/index372.html
+++ b/app/index372.html
@@ -86,6 +86,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
 			'data372/data_t_1.js',
 			'data372/data_t_2.js',
 			'data372/data_u_1.js',
+			'data372/data_u_2.js',
 			'data372/data_v_1.js',
 			'data372/data_w_1.js',
 			'data372/data_w_2.js',
