revise o.1.1 to o.1 per Matt

--- a/app/index372.html
+++ b/app/index372.html
@@ -73,7 +73,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
 			'data372/data_m_2.js',
 			'data372/data_m_3.js',
 			'data372/data_n_1.js',
-			'data372/data_o_1_1.js',
+			'data372/data_o_1.js',
 			'data372/data_o_2_1.js',
 			'data372/data_o_2_2.js',
 			'data372/data_p_1.js',
