ms-reduce-fraction.js factorization requires that problemData.index be reset-- ms-input-reduce.js directive for use with ms-reduce-fraction.js includes reset,  ms-input.js and ms-input-cash.js will no longer include logic to avoid reset (worked for "flip", but failed for ms-cancelfracs.js).

--- a/app/index371.html
+++ b/app/index371.html
@@ -173,6 +173,7 @@ value:a("$provide","value"),constant:a("$provide","constant","unshift"),filter:a
             'js/directives/ms-image.js',
             'js/directives/ms-input.js',
             'js/directives/ms-input-cash.js',
+			'js/directives/ms-input-reduce.js',
             'js/directives/ms-instruction.js',
             'js/directives/ms-long-division.js',
             'js/directives/ms-long-division-decimal.js',
